# pythonGeneral

./: Pipfile  pyproject.toml  setup.py
pythonGeneral/: config.toml
pythonGeneral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pythonGeneral/Scrapy/: scrapy.py
pythonGeneral/dataProcessing/: pandas.py  string.py
pythonGeneral/database/: mongo.py
pythonGeneral/email/: sendEmail.py
